White box models

--- a/White_Box_Models.ipynb
+++ b/White_Box_Models.ipynb
@@ -3,10 +3,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "MmHQn-2sThoa"
+      },
+      "source": [
+        "# **White-Box Models**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "dof1XVLJn0OD"
       },
       "source": [
-        "1. Upload your files. The relevant files are: Survey, feature_dict and known_kk"
+        "# 1. Upload your files. The relevant files are: Survey, feature_dict and known_kk"
       ]
     },
     {
@@ -438,7 +447,7 @@
         "id": "oSsePuTGoHV3"
       },
       "source": [
-        "2. Install the Libraries"
+        "# 2. Install the Libraries"
       ]
     },
     {
@@ -534,6 +543,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IGLD1UCsSpQH"
+      },
+      "source": [
+        "# 4. Inspect the Class Distribution"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -588,15 +606,7 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "# df_train = pd.read_excel('230807_Survey.xlsx', sheet_name='Result')\n",
         "\n",
-        "# # Define target and features\n",
-        "# X = df_train.drop(['Q18'], axis=1)\n",
-        "# y = df_train['Q18'].astype(int)  # ensure integer dtype for target\n",
-        "# y\n",
-        "# # Drop columns with >50% NaN values\n",
-        "# nan_threshold_cols = X.columns[(X.isnull().sum() / len(X)) > 0.5]\n",
-        "# X = X.drop(columns=nan_threshold_cols)\n",
         "sns.countplot(x=y, palette=\"pastel\")\n",
         "\n",
         "plt.title('Target Variable Distribution')\n",
@@ -711,7 +721,7 @@
         "id": "7IupZ87OoSxO"
       },
       "source": [
-        "4. Preprocess the training data"
+        "# 5. Preprocess the training data"
       ]
     },
     {
@@ -828,6 +838,15 @@
         "X_test_encoded = X_test_encoded.astype(np.int64)\n",
         "\n",
         "# Now you can continue with model training, evaluation, etc.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HKkHTVqmS01b"
+      },
+      "source": [
+        "# 6. Group rare categories (those are outliers)"
       ]
     },
     {
@@ -957,61 +976,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "i18n_FaYSnz-",
-        "outputId": "9ea93caf-7234-449d-81ad-8e6d13f56675"
+        "id": "YHkm46yNTHX9"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Low variance features: ['kategorie_nutzung', 'gestuetzte_bekanntheit_AOK', 'gestuetzte_bekanntheit_IKK_Brandenburg_Berlin', 'gestuetzte_bekanntheit_SBK', 'gestuetzte_bekanntheit_Mobil', 'gestuetzte_bekanntheit_mhplus', 'gestuetzte_bekanntheit_Pronova', 'gestuetzte_bekanntheit_BKK_VBU', 'gestuetzte_bekanntheit_VIACTIV', 'gestuetzte_bekanntheit_Keine', 'vertrieb_ansprache', 'werbung_anderer_kk', 'mediale_information', 'andere_gruende', 'telefonberatung', 'versicherungsmakler', 'social_media_foren', 'werbeanzeigen', 'andere_quellen', 'barriere_fehlende_beratung', 'barriere_einwaende_umfeld', 'barriere_schutz_luecke', 'barriere_kasse_egal', 'auslandskrankenversicherung', 'stationaerer_zusatzschutz', 'pflege_zusatzschutz', 'krankenhaustagegeld', 'ambulanter_zusatzschutz', 'zusatzversicherung_andere', 'weiss_ich_nicht_zusatzversicherung', 'gesundheitsverhalten_keine_rolle_select', 'gesundheitsverhalten_keine_angabe_select', 'vorerkrankung_alzheimer_select', 'vorerkrankung_asthma_select', 'vorerkrankung_niere_select', 'vorerkrankung_copd_select', 'vorerkrankung_diabetes_select', 'vorerkrankung_schilddruese_select', 'vorerkrankung_hepatitis_select', 'vorerkrankung_herz_select', 'vorerkrankung_krebs_select', 'vorerkrankung_migraene_select', 'vorerkrankung_multiple_sklerose_select', 'vorerkrankung_osteoporose_select', 'vorerkrankung_parkinson_select', 'vorerkrankung_reizdarm_select', 'vorerkrankung_rheuma_select', 'vorerkrankung_schlaganfall_select', 'vorerkrankung_schuppenflechte_select', 'dmp_asthma_select', 'dmp_copd_select', 'dmp_brustkrebs_select', 'dmp_khk_select', 'dmp_diabetes_select', 'ikk_classic', 'ikk_gesund_plus', 'ikk_suedwest', 'ikk_die_innovationskasse', 'ikk_brandenburg_und_berlin', 'big_direkt_gesund', 'dak_gesundheit', 'hek_hanseatische_krankenkasse', 'hkk', 'sbk', 'kkh_kaufmaennische_krankenkasse', 'knappschaft', 'landwirtschaftliche_krankenkasse_lkk', 'mobil_krankenkasse', 'mhplus_betriebskrankenkasse', 'pronova_bkk', 'audi_bkk', 'bahn_bkk', 'bkk_vbu', 'viactiv_krankenkasse', 'aok_die_gesundheitskasse_fuer_niedersachsen', 'aok_die_gesundheitskasse_in_hessen', 'aok_baden_wuerttemberg', 'aok_bayern_die_gesundheitskasse', 'aok_bremen_bremerhaven', 'aok_nordost_die_gesundheitskasse', 'aok_nordwest_die_gesundheitskasse', 'aok_plus_die_gesundheitskasse_fuer_sachsen_und_thueringen', 'aok_rheinland_hamburg_die_gesundheitskasse', 'aok_rheinland_pfalz_saarland_die_gesundheitskasse', 'aok_sachsen_anhalt_die_gesundheitskasse', 'bergische_krankenkasse', 'bertelsmann_bkk', 'betriebskrankenkasse_pricewaterhousecoopers', 'bkk_akzo_nobel_bayern', 'bkk_b_braun_aesculap', 'bkk_bpw_bergische_achsen_kg', 'bkk_deutsche_bank_ag', 'bkk_diakonie', 'bkk_euregio', 'bkk_evm', 'bkk_ewe', 'bkk_exklusiv', 'bkk_faber_castell_partner', 'bkk_firmus', 'bkk_freudenberg', 'bkk_gildemeister_seidensticker', 'bkk_groz_beckert', 'bkk_herkules', 'bkk_linde', 'bkk_mahle', 'bkk_melitta_hmr', 'bkk_miele', 'bkk_mtu', 'bkk_pfa_ff', 'bkk_pfalz', 'bkk_provita', 'bkk_public', 'bkk_rieker_ricosta_weisser', 'bkk_salzgitter', 'bkk_scheufelen', 'bkk_schwarzwald_baar_heuberg', 'bkk_technoform', 'bkk_textilgruppe_hof', 'bkk_vdn', 'bkk_verbundplus', 'bkk_verkehrsbau_union_bkk_vbu', 'bkk_voralb_heller_index_leuze', 'bkk_werra_meissner', 'bkk_wirtschaft_finanzen', 'bkk_wuerth', 'bkk_zf_partner', 'bkk_duerkoppadler', 'bkk24', 'bmw_bkk', 'bosch_bkk', 'continentale_betriebskrankenkasse', 'debeka_bkk', 'energie_betriebskrankenkasse', 'ernst_young_bkk', 'heimat_krankenkasse', 'karl_mayer_bkk', 'koenig_bauer_bkk', 'krones_bkk', 'mercedes_benz_bkk', 'merck_bkk', 'novitas_bkk', 'r_v_betriebskrankenkasse', 'salus_bkk', 'securvita_bkk', 'skd_bkk', 'suedzucker_bkk', 'tui_bkk', 'vivida_bkk', 'wmf_betriebskrankenkasse', 'andere_krankenkasse', 'entry_link_select']\n"
-          ]
-        }
-      ],
       "source": [
-        "from sklearn.feature_selection import VarianceThreshold\n",
-        "\n",
-        "selector = VarianceThreshold(threshold=0.1)\n",
-        "selector.fit(X_train_encoded)\n",
-        "\n",
-        "low_variance_features = X_train_encoded.columns[~selector.get_support()]\n",
-        "print(\"Low variance features:\", low_variance_features.tolist())\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hMbOlI7oTaEH",
-        "outputId": "293a72ce-9a2f-4de0-c4f2-831309a30cba"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Column: net_promoter_score_grund\n",
-            "Categories: ['negative', 'neutral', 'positive']\n",
-            "Encoded values in train: [2 1 0]\n"
-          ]
-        }
-      ],
-      "source": [
-        "for col in X_train.select_dtypes(include=['category']).columns:\n",
-        "    print(f\"\\nColumn: {col}\")\n",
-        "    print(\"Categories:\", X_train[col].cat.categories.tolist())\n",
-        "    print(\"Encoded values in train:\", X_train_encoded[col].unique())\n"
+        "# 7. Use different classification models"
       ]
     },
     {
